--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-PORT=8000
-DB_NAME=
-DB_PORT=
-DB_PASS=
+PORT=8080
+DB_NAME=group_project
+DB_PORT=5432
+DB_PASS=admin
 DB_USER=postgres
 DB_HOST=localhost
 DB_SSL_MODE=disable
