--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 PORT=8000
-DB_NAME=
-DB_PORT=
+DB_NAME=group_project_db
+DB_PORT=5432
 DB_PASS=
-DB_USER=postgres
+DB_USER=
 DB_HOST=localhost
 DB_SSL_MODE=disable
+JWT_DURATION=5
+JWT_SECRET_KEY=adadji
+JWT_ISSUER=E-WALLET LABS API
+ENV=dev
+
