feat: update be docker

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,11 @@
 PORT=8080
+DB_HOST=database
 DB_NAME=group_project_db
 DB_PORT=5432
 DB_PASS=admin
 DB_USER=postgres
-DB_HOST=localhost
 DB_SSL_MODE=disable
 JWT_DURATION=5
 JWT_SECRET_KEY=adadji
 JWT_ISSUER=E-WALLET LABS API
 ENV=dev
-
