feat: add .env.example data

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,7 @@ JWT_SECRET_KEY=adadji
 JWT_ISSUER=E-WALLET LABS API
 ENV=dev
 RAJA_ONGKIR_API_KEY=
-RAJA_ONGKIR_ENDPOINT=
+RAJA_ONGKIR_ENDPOINT=https://api.rajaongkir.com/starter
+JWT_REFRESH_DURATION=500
+JWT_REFRESH_SECRET_KEY=inirefreshtokensecretkeyyayayayayayaya
+JWT_REFRESH_ISSUER=E-WALLET LABS API
