feat(be-120): add env

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,10 @@ RAJA_ONGKIR_ENDPOINT=https://api.rajaongkir.com/starter
 JWT_REFRESH_DURATION=500
 JWT_REFRESH_SECRET_KEY=inirefreshtokensecretkeyyayayayayayaya
 JWT_REFRESH_ISSUER=E-WALLET LABS API
+
+EMAIL_SMTP_HOST="smtp.gmail.com"
+EMAIL_SMTP_PORT=587
+EMAIL_SENDER_NAME="Shopidel Indonesia <shopidel.team@gmail.com>"
+EMAIL_AUTH="shopidel.team@gmail.com"
+EMAIL_AUTH_PASSWORD=""
+CLIENT_RESET_PASSWORD_URL=""
