feat(be-127): remove comments

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ EMAIL_SENDER_NAME="Shopidel Indonesia <shopidel.team@gmail.com>"
 EMAIL_AUTH="shopidel.team@gmail.com"
 EMAIL_AUTH_PASSWORD=""
 CLIENT_RESET_PASSWORD_URL=""
+
+CLOUDINARY_SECRET=""
+CLOUDINARY_NAME=""
+CLOUDINARY_KEY=""
