feat(be-138): add new env variable

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,5 @@ CLIENT_RESET_PASSWORD_URL=""
 CLOUDINARY_SECRET=""
 CLOUDINARY_NAME=""
 CLOUDINARY_KEY=""
+
+USERNAME_SECRET_KEY=N1PCdw3M2B1TfJhoaY2mL736p2vCUc47
